--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "0.0.15",
   "description": "This is a template React Boilerplate that can be cloned via the npx tools.",
   "main": "index.js",
-  "bin": "./bin/template.js",
+  "bin": "./index.js",
   "scripts": {
     "start": "webpack-dev-server --mode=development --open --hot",
     "build": "webpack --mode=production"
   },
   "keywords": [],
   "license": "MIT",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
@@ -26,5 +22,8 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2"
+  },
+  "dependencies": {
+    "fs-extra": "^10.1.0"
   }
 }
